--- a/app/src/main/res/layout/activity_to_do_list.xml
+++ b/app/src/main/res/layout/activity_to_do_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -23,7 +22,8 @@
             android:layout_gravity="bottom|end"
             android:layout_margin="16dp"
             android:src="@drawable/ic_baseline_add_24"
-            android:backgroundTint="@color/white" />
+            android:backgroundTint="@color/white"
+            android:contentDescription="@string/cont_disc"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
