--- a/app/src/main/res/layout/input_file.xml
+++ b/app/src/main/res/layout/input_file.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="Add a new task"
+        android:text="@string/new_task"
         android:gravity="center"
         android:background="@color/black"
         android:padding="10dp"
@@ -23,7 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:baselineAligned="false">
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -33,7 +34,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Task"
+                android:text="@string/task"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="16sp"
@@ -50,12 +51,13 @@
                 android:id="@+id/task"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Task"
+                android:hint="@string/task"
                 android:textColorHint="@color/black"
                 android:textStyle="normal"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                android:layout_margin="10dp"/>
+                android:layout_margin="10dp"
+                android:autofillHints="" />
         </RelativeLayout>
 
     </LinearLayout>
@@ -64,7 +66,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:baselineAligned="false">
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -74,7 +77,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Description"
+                android:text="@string/description"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="16sp"
@@ -91,19 +94,21 @@
                 android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Description"
+                android:hint="@string/description"
                 android:textColorHint="@color/black"
                 android:textStyle="normal"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                android:layout_margin="10dp"/>
+                android:layout_margin="10dp"
+                android:autofillHints="" />
         </RelativeLayout>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:baselineAligned="false">
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -114,7 +119,7 @@
                 android:id="@+id/btn_cancel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Cancel"
+                android:text="@string/cancel"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:background="@color/black"
@@ -133,7 +138,7 @@
                 android:id="@+id/btn_save"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Save"
+                android:text="@string/save"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:background="@color/black"
