--- a/app/src/main/res/layout/retrieved_layout.xml
+++ b/app/src/main/res/layout/retrieved_layout.xml
@@ -25,11 +25,11 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
-                android:text="June 18, 2020"
+                android:text="@string/date"
                 android:gravity="center"
                 android:background="@color/black"
                 android:padding="10dp"
-                android:textSize="10sp"
+                android:textSize="12sp"
                 android:textStyle="bold"/>
         </LinearLayout>
 
@@ -42,7 +42,7 @@
                 android:id="@+id/taskTv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Task"
+                android:text="@string/task"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 android:textAlignment="center"
@@ -56,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:textColor="@color/black"
-                android:text="Description"
+                android:text="@string/description"
                 android:textSize="15sp"
                 android:maxLines="3"
                 android:textStyle="normal"/>
