--- a/app/src/main/res/layout/activity_past_papers.xml
+++ b/app/src/main/res/layout/activity_past_papers.xml
@@ -7,15 +7,15 @@
     android:background="@drawable/gradient"
     tools:context=".PastPapersActivity">
 
-    <Button
-        android:id="@+id/Return2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
-        android:text="@string/return2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+<!--    <Button-->
+<!--        android:id="@+id/Return2"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginBottom="64dp"-->
+<!--        android:text="@string/return2"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
