--- a/app/src/main/res/layout/activity_planner.xml
+++ b/app/src/main/res/layout/activity_planner.xml
@@ -57,7 +57,7 @@
             android:id="@+id/monthYearTV"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="July 2021"
+            android:text="@string/date"
             android:layout_weight="2"
             android:padding="10dp"
             android:textColor="@color/white"
@@ -83,6 +83,15 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         tools:ignore="MissingConstraints">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="SUN"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:textSize="16sp"/>
 
         <TextView
             android:layout_width="0dp"
@@ -115,7 +124,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="THURS"
+            android:text="THUR"
             android:textColor="@color/white"
             android:textAlignment="center"
             android:textSize="16sp"/>
@@ -134,15 +143,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="SAT"
-            android:textColor="@color/white"
-            android:textAlignment="center"
-            android:textSize="16sp"/>
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="SUN"
             android:textColor="@color/white"
             android:textAlignment="center"
             android:textSize="16sp"/>
