--- a/app/src/main/res/layout/activity_week_view.xml
+++ b/app/src/main/res/layout/activity_week_view.xml
@@ -24,6 +24,8 @@
     <!--        android:layout_height="match_parent"-->
     <!--        android:orientation="vertical">-->
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,7 +49,7 @@
             android:id="@+id/monthYearTV"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="July 2021"
+            android:text="@string/date"
             android:layout_weight="2"
             android:padding="10dp"
             android:textColor="@color/white"
@@ -73,6 +75,15 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         tools:ignore="MissingConstraints">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="SUN"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:textSize="16sp"/>
 
         <TextView
             android:layout_width="0dp"
@@ -105,7 +116,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="THURS"
+            android:text="THUR"
             android:textColor="@color/white"
             android:textAlignment="center"
             android:textSize="16sp"/>
@@ -128,15 +139,6 @@
             android:textAlignment="center"
             android:textSize="16sp"/>
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="SUN"
-            android:textColor="@color/white"
-            android:textAlignment="center"
-            android:textSize="16sp"/>
-
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -148,11 +150,17 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Event"
+        android:text="@string/new_event"
         android:textColor="@color/white"
         android:background="@color/black"
         android:textStyle="bold"
-        android:onClick="previousWeekAction"
+        android:onClick="newEventAction"
+        android:layout_gravity="center"
         android:textSize="20sp" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="5" />
 
 </LinearLayout>
