--- a/app/src/main/res/layout/event_cell.xml
+++ b/app/src/main/res/layout/event_cell.xml
@@ -12,6 +12,6 @@
         android:id="@+id/eventCellTV"
         android:textSize="20sp"
         android:textColor="@color/black"
-        android:text="Event"/>
+        android:text="@string/event"/>
 
 </LinearLayout>
