--- a/app/src/main/res/layout/activity_event_edit.xml
+++ b/app/src/main/res/layout/activity_event_edit.xml
@@ -39,16 +39,17 @@
         android:textAlignment="center"
         android:textColor="@color/black" />
 
-    <TextView
+    <Button
         android:id="@+id/eventTimeTV"
+        android:onClick="popTimePicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:text="Time"
+        android:text="@string/time"
         android:textSize="20sp"
         android:textAlignment="center"
-        android:textColor="@color/black" />
+        android:textColor="@color/white" />
 
     <Button
         android:layout_marginTop="20dp"
