Got rid of back buttons to fix the code

--- a/app/src/main/res/layout/activity_week_view.xml
+++ b/app/src/main/res/layout/activity_week_view.xml
@@ -148,6 +148,7 @@
         android:layout_weight="1"/>
 
     <Button
+        android:id="@+id/newEvent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/new_event"
