--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/forgot_password"
+        android:fontFamily="@font/playfair_display_bold"
         android:textColor="@color/black"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,6 +28,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:text="@string/forgot_password_info"
+        android:fontFamily="@font/playfair_display_regular"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -42,62 +44,12 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:text="@string/forgot_password_info_2"
+        android:fontFamily="@font/playfair_display_regular"
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forgotPasswordInfo" />
-
-<!--    <com.google.android.material.textfield.TextInputLayout-->
-<!--        android:id="@+id/inputEmail"-->
-<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="16dp"-->
-<!--        android:layout_marginTop="64dp"-->
-<!--        android:layout_marginEnd="16dp"-->
-<!--        app:boxStrokeColor="@color/black"-->
-<!--        android:textColorHint="@color/black"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordInfo2"-->
-<!--        app:startIconDrawable="@drawable/ic_baseline_email_24"-->
-<!--        app:counterEnabled="true"-->
-<!--        app:counterMaxLength="29">-->
-
-<!--        <com.google.android.material.textfield.TextInputEditText-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:hint="@string/email"-->
-<!--            android:inputType="textEmailAddress"-->
-<!--            android:maxLength="29"/>-->
-<!--    </com.google.android.material.textfield.TextInputLayout>-->
-
-
-
-<!--    <Button-->
-<!--        android:id="@+id/btnResetPassword"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="16dp"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:layout_marginEnd="16dp"-->
-<!--        android:text="@string/reset_password"-->
-<!--        android:textSize="16sp"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/Return"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="32dp"-->
-<!--        android:text="@string/go_back"-->
-<!--        android:textSize="18sp"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/btnResetPassword" />-->
 
     <EditText
         android:layout_width="match_parent"
@@ -109,6 +61,7 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="@string/email"
+        android:fontFamily="@font/pt_serif_regular"
         android:inputType="textEmailAddress"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintTop_toBottomOf="@+id/forgotPasswordInfo2"
@@ -124,19 +77,9 @@
         android:layout_marginEnd="16dp"
         android:text="@string/reset_password"
         android:textSize="16sp"
+        android:fontFamily="@font/playfair_display_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edittextEmail" />
-
-<!--    <TextView-->
-<!--        android:id="@+id/Return"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="32dp"-->
-<!--        android:text="@string/go_back"-->
-<!--        android:textSize="18sp"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/btnResetPassword" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
