--- a/app/src/main/res/layout/input_file.xml
+++ b/app/src/main/res/layout/input_file.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="@string/new_task"
+        android:fontFamily="@font/playfair_display_bold"
         android:gravity="center"
         android:background="@color/black"
         android:padding="10dp"
@@ -35,6 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/task"
+                android:fontFamily="@font/playfair_display_bold"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="16sp"
@@ -56,6 +58,7 @@
                 android:textStyle="normal"
                 android:textColor="@color/black"
                 android:textSize="16sp"
+                android:fontFamily="@font/pt_serif_regular"
                 android:layout_margin="10dp"
                 android:autofillHints="" />
         </RelativeLayout>
@@ -78,6 +81,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/description"
+                android:fontFamily="@font/pt_serif_regular"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="16sp"
@@ -95,6 +99,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/description"
+                android:fontFamily="@font/pt_serif_regular"
                 android:textColorHint="@color/black"
                 android:textStyle="normal"
                 android:textColor="@color/black"
@@ -120,6 +125,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/cancel"
+                android:fontFamily="@font/playfair_display_bold"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:background="@color/black"
@@ -139,6 +145,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/save"
+                android:fontFamily="@font/playfair_display_bold"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:background="@color/black"
