--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,8 +39,9 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/pt_serif_regular"
             android:hint="@string/email"
-            android:inputType="textEmailAddress"/>
+            android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -62,8 +63,9 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/pt_serif_regular"
             android:hint="@string/password"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
@@ -71,6 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/playfair_display_regular"
         android:text="@string/forgot_password"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/inputPassword"
@@ -81,6 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/playfair_display_regular"
         android:text="@string/create_account"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/btnLogin"
@@ -92,16 +96,18 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/playfair_display_bold"
         android:text="@string/login"
         app:layout_constraintEnd_toEndOf="@+id/forgotPassword"
         app:layout_constraintStart_toStartOf="@+id/inputPassword"
-        app:layout_constraintTop_toBottomOf="@+id/forgotPassword"/>
+        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />
 
     <CheckBox
         android:id="@+id/remember_me"
-        android:layout_width="150dp"
-        android:layout_height="29dp"
+        android:layout_width="164dp"
+        android:layout_height="35dp"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/playfair_display_regular"
         android:text="@string/remember_me"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/inputPassword"
