--- a/app/src/main/res/layout/activity_week_view.xml
+++ b/app/src/main/res/layout/activity_week_view.xml
@@ -1,30 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".WeekViewActivity"
     android:background="@drawable/gradient"
     android:orientation="vertical">
-
-    <!--    <Button-->
-    <!--        android:id="@+id/Return2"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_marginBottom="64dp"-->
-    <!--        android:text="@string/return2"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent" />-->
-
-    <!--    <LinearLayout-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="match_parent"-->
-    <!--        android:orientation="vertical">-->
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -49,13 +31,14 @@
             android:id="@+id/monthYearTV"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/date"
             android:layout_weight="2"
-            android:padding="10dp"
-            android:textColor="@color/white"
-            android:textSize="20sp"
             android:background="@color/black"
-            android:gravity="center"/>
+            android:fontFamily="@font/playfair_display_bold"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/date"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
 
         <Button
             android:layout_width="0dp"
@@ -80,64 +63,71 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="SUN"
-            android:textColor="@color/white"
+            android:fontFamily="@font/playfair_display_regular"
+            android:text="@string/sunday"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="MON"
-            android:textColor="@color/white"
+            android:fontFamily="@font/playfair_display_regular"
+            android:text="@string/monday"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="TUE"
-            android:textColor="@color/white"
+            android:fontFamily="@font/playfair_display_regular"
+            android:text="@string/tuesday"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="WED"
-            android:textColor="@color/white"
+            android:fontFamily="@font/playfair_display_regular"
+            android:text="@string/wednesday"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="THUR"
-            android:textColor="@color/white"
+            android:fontFamily="@font/playfair_display_regular"
+            android:text="@string/thursday"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="FRI"
-            android:textColor="@color/white"
+            android:fontFamily="@font/playfair_display_regular"
+            android:text="@string/friday"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="SAT"
-            android:textColor="@color/white"
+            android:fontFamily="@font/playfair_display_regular"
+            android:text="@string/saturday"
             android:textAlignment="center"
-            android:textSize="16sp"/>
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
     </LinearLayout>
 
@@ -151,14 +141,15 @@
         android:id="@+id/newEvent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:background="@color/black"
+        android:fontFamily="@font/playfair_display_bold"
+        android:onClick="newEventAction"
         android:text="@string/new_event"
         android:textColor="@color/white"
-        android:background="@color/black"
-        android:textStyle="bold"
-        android:layout_marginTop="20dp"
-        android:onClick="newEventAction"
-        android:layout_gravity="center"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <ListView
         android:id="@+id/eventListView"
