--- a/app/src/main/res/layout/event_cell.xml
+++ b/app/src/main/res/layout/event_cell.xml
@@ -5,13 +5,14 @@
     android:layout_height="60dp">
 
     <TextView
+        android:id="@+id/eventCellTV"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:gravity="center"
         android:layout_marginStart="20dp"
-        android:id="@+id/eventCellTV"
-        android:textSize="20sp"
+        android:fontFamily="@font/playfair_display_bold"
+        android:gravity="center"
+        android:text="@string/event"
         android:textColor="@color/black"
-        android:text="@string/event"/>
+        android:textSize="20sp" />
 
 </LinearLayout>
