--- a/app/src/main/res/layout/retrieved_layout.xml
+++ b/app/src/main/res/layout/retrieved_layout.xml
@@ -26,6 +26,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
                 android:text="@string/date"
+                android:fontFamily="@font/playfair_display_bold"
                 android:gravity="center"
                 android:background="@color/black"
                 android:padding="10dp"
@@ -43,6 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/task"
+                android:fontFamily="@font/playfair_display_bold"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 android:textAlignment="center"
@@ -57,6 +59,7 @@
                 android:layout_margin="10dp"
                 android:textColor="@color/black"
                 android:text="@string/description"
+                android:fontFamily="@font/playfair_display_regular"
                 android:textSize="15sp"
                 android:maxLines="3"
                 android:textStyle="normal"/>
