--- a/app/src/main/res/layout/update_data.xml
+++ b/app/src/main/res/layout/update_data.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="@string/update_task"
+        android:fontFamily="@font/playfair_display_bold"
         android:gravity="center"
         android:background="@color/black"
         android:textColor="@color/white"
@@ -33,6 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/task"
+                android:fontFamily="@font/playfair_display_bold"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:layout_margin="10dp" />
@@ -49,6 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/task"
+                android:fontFamily="@font/pt_serif_regular"
                 android:textStyle="normal"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
@@ -75,6 +78,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/description"
+                android:fontFamily="@font/playfair_display_bold"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:layout_margin="10dp" />
@@ -91,6 +95,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/description"
+                android:fontFamily="@font/pt_serif_regular"
                 android:textStyle="normal"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
@@ -118,6 +123,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/delete"
+                android:fontFamily="@font/playfair_display_bold"
                 android:textAllCaps="false"
                 android:background="@color/black"
                 android:textColor="@color/white"
@@ -137,6 +143,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/update"
+                android:fontFamily="@font/playfair_display_bold"
                 android:textAllCaps="false"
                 android:background="@color/black"
                 android:textColor="@color/white"
