--- a/app/src/main/res/layout/input_file.xml
+++ b/app/src/main/res/layout/input_file.xml
@@ -17,8 +17,7 @@
         android:padding="10dp"
         android:textColor="@color/white"
         android:textStyle="bold"
-        android:textSize="20sp"
-        />
+        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
