--- a/app/src/main/res/layout/fragment_planner.xml
+++ b/app/src/main/res/layout/fragment_planner.xml
@@ -7,28 +7,99 @@
 
 
     <TextView
-        android:id="@+id/planner"
+        android:id="@+id/TV_planner_howto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:text="@string/planner_how_to"
+        android:textAllCaps="true"
+        android:fontFamily="@font/playfair_display_bold"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:padding="10dp"
+        android:layout_marginTop="5dp">
+    </TextView>
+
+    <TextView
+        android:id="@+id/TV_how_planner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/TV_planner_howto"
+        android:textColor="@color/black"
+        android:text="@string/planner_help_1"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        android:padding="10dp"
+        android:layout_marginTop="10dp">
+    </TextView>
+
+    <TextView
+        android:id="@+id/TV_how_planner_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:text="@string/planner"
-        android:textSize="30sp"
+        android:layout_below="@+id/TV_how_planner"
+        android:layout_marginTop="10dp"
+        android:text="@string/planner_help_2"
+        android:padding="10dp"
+        android:textAlignment="center"
+        android:textSize="16sp"
         android:layout_centerInParent="true">
+    </TextView>
 
+    <TextView
+        android:id="@+id/TV_how_planner_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:layout_below="@+id/TV_how_planner_2"
+        android:layout_marginTop="10dp"
+        android:text="@string/planner_help_3"
+        android:padding="10dp"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        android:layout_centerInParent="true">
+    </TextView>
+
+    <TextView
+        android:id="@+id/TV_how_planner_4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:layout_below="@+id/TV_how_planner_3"
+        android:layout_marginTop="10dp"
+        android:text="@string/planner_help_4"
+        android:padding="10dp"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        android:layout_centerInParent="true">
+    </TextView>
+
+    <TextView
+        android:id="@+id/TV_how_planner_5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:layout_below="@+id/TV_how_planner_4"
+        android:layout_marginTop="10dp"
+        android:text="@string/planner_help_5"
+        android:padding="10dp"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        android:layout_centerInParent="true">
     </TextView>
 
     <Button
         android:id="@+id/btn_planner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/planner"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:textAllCaps="true"
+        android:layout_below="@+id/TV_how_planner_5"
         android:layout_centerInParent="true"
-        android:layout_below="@+id/planner"
-        android:layout_marginTop="36dp"
-        />
+        android:layout_marginTop="15dp"
+        android:text="@string/planner"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
