--- a/app/src/main/res/layout/fragment_todolist.xml
+++ b/app/src/main/res/layout/fragment_todolist.xml
@@ -5,7 +5,7 @@
     android:background="@drawable/gradient">
 
     <TextView
-        android:id="@+id/TV_how_to_use"
+        android:id="@+id/TV_todo_howto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
@@ -19,71 +19,71 @@
     </TextView>
 
     <TextView
-        android:id="@+id/TV_how_to"
+        android:id="@+id/TV_how_todo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/TV_how_to_use"
+        android:layout_below="@+id/TV_todo_howto"
         android:textColor="@color/black"
         android:text="@string/to_do_help_1"
         android:textAlignment="center"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:padding="10dp"
         android:layout_marginTop="10dp">
     </TextView>
 
     <TextView
-        android:id="@+id/TV_how_to_2"
+        android:id="@+id/TV_how_todo_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:layout_below="@+id/TV_how_to"
+        android:layout_below="@+id/TV_how_todo"
         android:layout_marginTop="10dp"
         android:text="@string/to_do_help_2"
         android:padding="10dp"
         android:textAlignment="center"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:layout_centerInParent="true">
     </TextView>
 
     <TextView
-        android:id="@+id/TV_how_to_3"
+        android:id="@+id/TV_how_todo_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:layout_below="@+id/TV_how_to_2"
+        android:layout_below="@+id/TV_how_todo_2"
         android:layout_marginTop="10dp"
         android:text="@string/to_do_help_3"
         android:padding="10dp"
         android:textAlignment="center"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:layout_centerInParent="true">
     </TextView>
 
     <TextView
-        android:id="@+id/TV_how_to_4"
+        android:id="@+id/TV_how_todo_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:layout_below="@+id/TV_how_to_3"
+        android:layout_below="@+id/TV_how_todo_3"
         android:layout_marginTop="10dp"
         android:text="@string/to_do_help_4"
         android:padding="10dp"
         android:textAlignment="center"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:layout_centerInParent="true">
     </TextView>
 
     <TextView
-        android:id="@+id/TV_how_to_5"
+        android:id="@+id/TV_how_todo_5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:layout_below="@+id/TV_how_to_4"
+        android:layout_below="@+id/TV_how_todo_4"
         android:layout_marginTop="10dp"
         android:text="@string/to_do_help_5"
         android:padding="10dp"
         android:textAlignment="center"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:layout_centerInParent="true">
     </TextView>
 
@@ -91,7 +91,7 @@
         android:id="@+id/btn_todo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/TV_how_to_5"
+        android:layout_below="@+id/TV_how_todo_5"
         android:layout_centerInParent="true"
         android:layout_marginTop="15dp"
         android:text="@string/todolist"
