--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -11,7 +11,7 @@
         android:icon="@drawable/ic_baseline_format_list_bulleted_24"
         android:title="@string/todolist" />
     <item
-        android:id="@+id/past_papers"
+        android:id="@+id/TV_about_howto"
         android:icon="@drawable/ic_baseline_notes_24"
         android:title="@string/about_us" />
 </menu>
